--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ fieldset{
   border: none;
 }
 
+.fieldset-wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 fieldset legend{
   font-family: 'Archivo', sans-serif;
   font-weight: 600;
@@ -89,7 +95,11 @@ fieldset legend{
   color: #C1BCCC;
 }
 
-.input-wrapper input{
+.input-wrapper label span:hover{
+  color: #6c6a71;
+}
+
+.input-wrapper input, .input-wrapper textarea{
   background: #FAFAFC;
   border: 1px solid #E6E6F0;
   border-radius: 8px;
@@ -97,5 +107,10 @@ fieldset legend{
   padding: 0 24px;
   font-size: 16px;
   line-height: 26px;
-  color: #C1BCCC;
+  color: #6c6a71;
+}
+
+.input-wrapper textarea{
+  padding: 0;
+  height: 168px;
 }
