--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ form{
   border-radius: 8px;
   min-height: 300px;
   padding: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
 
 fieldset{
@@ -124,3 +127,12 @@ fieldset legend{
   background-repeat: no-repeat;
   background-position: right 24px top 50%;
 }
+
+.col-3{
+  display: flex;
+  gap: 20px;
+}
+
+.col-3 > div:nth-child(1){
+  width: 100%;
+} 
